# native_opencv

./: pubspec.yaml
android/: CMakeLists.txt  build.gradle
example/: .metadata  pubspec.yaml
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: extract.sh  native_opencv.podspec
ios/Classes/: native_opencv.cpp
lib/: native_opencv.dart
